--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -1,11 +1,11 @@
 @use '../custom' as *;
 @use '../components/mixins' as *;
 
-.intro {
+.intro-section {
   @include bgGradient;
-  padding: 5rem 0 0 0;
+  padding: 3rem 0 0 0;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .video-box {
