--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -8,3 +8,16 @@
     rgba($secondary, 0.95)
   );
 }
+
+//center
+@mixin absoluteCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@mixin transitionProperty {
+  transition-property: all;
+  transition-duration: 1s;
+}
