--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -47,6 +47,27 @@
   background-color: $primary;
 }
 
+// display 3
+.display-3 {
+  font-family: "Poppins", sans-serif;
+
+  &--title {
+    font-size: 1.2rem;
+    text-transform: capitalize;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+    display: inline-block;
+    background-image: linear-gradient(to right, $primary, $secondary);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 1.8rem;
+    }
+  }
+}
+
 //right border
 .border-right {
   border-right: 0;
@@ -55,4 +76,13 @@
     border-right: 0.1rem solid $gray-300;
     height: 100%;
   }
+}
+
+// GRADIENT BG
+.gradient {
+  background: linear-gradient(
+    to right,
+    rgba($primary, 0.95),
+    rgba($secondary, 0.95)
+  );
 }
