--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -10,30 +10,16 @@
 
   button {
     text-transform: capitalize;
-    .btn {
-      .active {
-        font-size: 3rem;
-      }
-    }
   }
 }
 
-// .btn.active {
-//   font-size: 3rem;
-// }
-
-button.btn.active .portfolio-box {
+.portfolio-box {
   position: relative;
   width: 30%;
   height: 18.5rem;
   overflow: hidden;
   margin-bottom: 1.2rem;
   border-top: 0.5rem solid lighten($primary, 20%);
-  display: none;
-
-  &.show {
-    display: block;
-  }
 
   img {
     width: 100%;
